--- a/views/order/registration.ejs
+++ b/views/order/registration.ejs
@@ -84,20 +84,23 @@ Combined Mark: one trademark, which contains verbal elements as well as design e
 						</div>
 					
 						<div class="form-check" style="padding-top:20px">
-							<label class="form-box-container" for="color_claim"><b>Color Claim</b></label>
+							<label class="form-box-container" for="colorClaim"><b>Color Claim</b></label>
 							
 
 							<div class="form-check">
-								<input class="form-check-input" type="radio" name="color_claim" id="yesClaim" value="yes" >
+								<input class="form-check-input" type="radio" name="colorClaim" id="yesClaim" value="yes" >
 								<label class="form-check-label" for="yesClaim">
 									Yes
 								</label>
 							</div>
 							<div class="form-check">
-								<input class="form-check-input" type="radio" name="color_claim" id="noClaim" value="no" checked>
+								<input class="form-check-input" type="radio" name="colorClaim" id="noClaim" value="no" checked>
 								<label class="form-check-label" for="noClaim">
 									No
 								</label>
+							</div>
+							<div id="colorClaimText" class="form-check" style="display:none">
+								<input class="form-check-input" type="text" name="colorClaimText" placeholder="Color" value="" >
 							</div>
 
 						</div>
