--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -35,6 +35,8 @@
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
 						<input class="" type="hidden" name="word_mark" value="<%= data.word_mark %>">
+						<input class="" type="hidden" name="colorClaim" value="<%= data.colorClaim %>">
+                        <input class="" type="hidden" name="colorClaimText" value="<%= data.colorClaimText %>">
 
 						<input class="" type="hidden" name="nature" value="<%= data.nature %>">
 						<input class="" type="hidden" name="company" value="<%= data.company %>">
@@ -87,6 +89,8 @@
 						<input class="" type="hidden" name="serviceType" value="<%= data.serviceType %>">
 						<input class="" type="hidden" name="type" value="<%= data.type %>">
 						<input class="" type="hidden" name="word_mark" value="<%= data.word_mark %>">
+						<input class="" type="hidden" name="colorClaim" value="<%= data.colorClaim %>">
+                        <input class="" type="hidden" name="colorClaimText" value="<%= data.colorClaimText %>">
 
 						<input class="" type="hidden" name="nature" value="<%= data.nature %>">
 						<input class="" type="hidden" name="company" value="<%= data.company %>">
