--- a/views/admin/trademark/edit.ejs
+++ b/views/admin/trademark/edit.ejs
@@ -16,7 +16,7 @@
 
             <div class="form-group">
                 <label>Serial Number</label>
-                <input type="text" class="form-control" value="<%= trademark.serialNumber %>" placeholder="" name="serialNumber" disabled>
+                <input type="text" class="form-control" value="<%= trademark.serialNumber %>" placeholder="" name="serialNumber">
             </div>
 
             <div class="form-group">
