--- a/views/trademark-order/thankyou.ejs
+++ b/views/trademark-order/thankyou.ejs
@@ -33,7 +33,12 @@
 
             <% } %>
 
-			
+			<div class="form-group row">
+                <div class="col-md-12 text-center">
+                    <a href="/customer" class="btn btn-primary">My Account</a>
+                    <!-- <input class="btn btn-primary btn-black tn-rounded-primary" type="button" name="submit" value="Continue"> -->
+                </div>
+            </div>
 		</div>
 
 
