--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -12,7 +12,7 @@
 				<div class="network-box">
 					<h2>Our network of Experienced Trademark Attorneys</h2>
 					<!-- <span class="title-separator"></span> -->
-					<p>in 195 Countries and Treaty Regions can provide you with fast, simple, and cost-efficient trademark filling services</p>
+					<p>in 195 Countries and Treaty Regions can provide you with fast, simple, and cost-efficient trademark filing services</p>
 
 					<!-- SEARCH BOX -->
 					<div id="search">
