--- a/views/order/confirmation.ejs
+++ b/views/order/confirmation.ejs
@@ -23,6 +23,123 @@
 				</tr>
 			</table>
 
+			
+			<!-- <div class="col-md-12"> -->
+				<% if( data.nature == "Company") {  %> 
+					<div class="row">
+						<div class="col-md-6">
+						<h4>Company Info</h4>
+						<table class="table">
+							<tr>
+								<th>Company Name: </th>
+								<td><%= data.company %></td>
+							</tr>
+							<tr>
+								<th>Company Street: </th>
+								<td><%= data.companyStreet %> </td>
+							</tr>
+							<tr>
+								<th>Company City: </th>
+								<td><%= data.companyCity %></td>
+							</tr>
+							<tr>
+								<th>Company State/Province: </th>
+								<td><%= data.companyState %></td>
+							</tr>
+							<tr>
+								<th>Company Postal Code: </th>
+								<td><%= data.companyZipCode %></td>
+							</tr>
+							<tr>
+								<th>Company Country: </th>
+								<td><%= data.companyCountry %></td>
+							</tr>
+						</table>
+
+					</div>
+
+					<div class="col-md-6">
+						<h4>Representative Info</h4>
+						<table class="table">
+							<tr>
+								<th>Name: </th>
+								<td><%= data.fname %> <%= data.lname %></td>
+							</tr>
+							<tr>
+								<th>Email: </th>
+								<td><%= data.email %> </td>
+							</tr>
+							<tr>
+								<th>Phone: </th>
+								<td><%= data.phone %></td>
+							</tr>
+							<tr>
+								<th>Fax: </th>
+								<td><%= data.fax %></td>
+							</tr>
+							<tr>
+								<th>Street: </th>
+								<td><%= data.repStreet %></td>
+							</tr>
+							<tr>
+								<th>City: </th>
+								<td><%= data.repCity %></td>
+							</tr>
+							<tr>
+								<th>State/Province: </th>
+								<td><%= data.repState %></td>
+							</tr>
+							<tr>
+								<th>Postal Code: </th>
+								<td><%= data.repZipCode %></td>
+							</tr>
+						</table>
+					</div>
+				</div>
+
+				<% } else { %>
+
+					<div class="row">
+						<div class="col-md-12">
+						<h4>Client Info</h4>
+						<table class="table">
+							<tr>
+								<th>Name: </th>
+								<td><%= data.fname %> <%= data.lname %></td>
+
+								<th>Street: </th>
+								<td><%= data.repStreet %></td>
+							</tr>
+							<tr>
+								<th>Email: </th>
+								<td><%= data.email %> </td>
+
+								<th>City: </th>
+								<td><%= data.repCity %></td>
+							</tr>
+							<tr>
+								<th>Phone: </th>
+								<td><%= data.phone %></td>
+
+								<th>State/Province: </th>
+								<td><%= data.repState %></td>
+							</tr>
+							<tr>
+								<th>Fax: </th>
+								<td><%= data.fax %></td>
+
+								<th>Postal Code: </th>
+								<td><%= data.repZipCode %></td>
+							</tr>
+							
+						</table>
+
+						</div>
+					</div>
+				
+				<% } %>
+			<!-- </div> -->
+			
 
 			<% if( user ) { %>
 
